--- a/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
+++ b/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.geometry.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -14,7 +22,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="900.0" prefWidth="1440.0" styleClass="grid" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.controllers.ModificaRicettaController">
+<GridPane fx:id="grid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="900.0" prefWidth="1440.0" styleClass="grid" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.unipi.brewathome.controllers.ModificaRicettaController">
   <columnConstraints>
     <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="10.833333" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
@@ -37,19 +45,19 @@
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="33.33" minWidth="10.0" percentWidth="1.6777777" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
       <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="33.33" minWidth="10.0" percentWidth="1.6777777" />
-      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
-      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="33.33" minWidth="10.0" percentWidth="1.6777777" />
-      <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
-      <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="10.833333" />
+      <ColumnConstraints fillWidth="false" halignment="LEFT" hgrow="ALWAYS" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints fillWidth="false" halignment="LEFT" hgrow="ALWAYS" maxWidth="33.33" minWidth="10.0" percentWidth="1.6777777" />
+      <ColumnConstraints fillWidth="false" halignment="LEFT" hgrow="ALWAYS" maxWidth="100.0" minWidth="10.0" percentWidth="5.0" />
+      <ColumnConstraints fillWidth="false" halignment="LEFT" hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" percentWidth="10.833333" />
   </columnConstraints>
   <rowConstraints>
       <RowConstraints fillHeight="false" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="72.0" valignment="CENTER" vgrow="SOMETIMES" />
-    <RowConstraints fillHeight="false" minHeight="10.0" valignment="TOP" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" valignment="TOP" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <ScrollPane fx:id="scroll" fitToWidth="true" hbarPolicy="NEVER" styleClass="scroll" GridPane.columnIndex="1" GridPane.columnSpan="19" GridPane.rowIndex="1">
+      <ScrollPane fx:id="scroll" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" styleClass="scroll" GridPane.columnIndex="1" GridPane.columnSpan="19" GridPane.rowIndex="1">
          <content>
-            <GridPane>
+            <GridPane styleClass="grid-container">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="456.0" minWidth="10.0" percentWidth="48.717949" prefWidth="456.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="306.0" minWidth="10.0" prefWidth="24.0" />
@@ -57,38 +65,38 @@
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="96.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="48.0" valignment="CENTER" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="254.0" minHeight="10.0" prefHeight="237.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="48.0" valignment="CENTER" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="254.0" minHeight="10.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <AnchorPane GridPane.columnSpan="3">
                      <children>
-                        <Text layoutY="36.94921875" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="display-medium" text="Nome ricetta" AnchorPane.topAnchor="24.0" />
+                        <Text fx:id="textNomeRicetta" layoutY="36.94921875" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="display-medium" text="Nome ricetta" AnchorPane.topAnchor="24.0" />
                         <HBox layoutX="722.0" layoutY="-6.0" spacing="12.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="24.0">
                            <children>
-                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn">
+                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#eliminaRicetta" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--alert">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../../../img/add_iconpx.png" />
+                                          <Image url="@../../../img/delete_24px.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn">
+                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#salvaRicetta" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--positive">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../../../img/add_iconpx.png" />
+                                          <Image url="@../../../img/save.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn">
+                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#esci" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--standard">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@../../../img/add_iconpx.png" />
+                                          <Image url="@../../../img/close_24px.png" />
                                        </image>
                                     </ImageView>
                                  </graphic>
@@ -98,10 +106,31 @@
                      </children>
                   </AnchorPane>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-large" text="Ingredienti" GridPane.rowIndex="1" />
-                  <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
+                  <VBox prefHeight="200.0" prefWidth="100.0" spacing="16.0" styleClass="card" GridPane.rowIndex="2">
                      <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-large" text="Fermentabili" />
-                        <TableView fx:id="tableFermentabili">
+                        <AnchorPane prefHeight="72.0">
+                           <children>
+                              <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0">
+                                 <image>
+                                    <Image url="@../../../img/fermentabili_icon.png" />
+                                 </image>
+                              </ImageView>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-large" text="Fermentabili" AnchorPane.leftAnchor="72.0" AnchorPane.topAnchor="0.0" />
+                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#aggiungiFermentabile" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--filled" AnchorPane.rightAnchor="0.0">
+                                 <graphic>
+                                    <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../../img/add_iconpx.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                           </children>
+                           <VBox.margin>
+                              <Insets top="16.0" />
+                           </VBox.margin>
+                        </AnchorPane>
+                        <TableView fx:id="tableFermentabili" styleClass="table">
                           <columns>
                             <TableColumn fx:id="columnPeso" editable="false" prefWidth="75.0" resizable="false" sortable="false" text="Peso" />
                             <TableColumn fx:id="columnNome" editable="false" prefWidth="194.0" resizable="false" sortable="false" text="Nome" />
@@ -115,6 +144,65 @@
             </GridPane>
          </content>
       </ScrollPane>
-      <VBox prefHeight="200.0" GridPane.columnIndex="21" GridPane.columnSpan="4" GridPane.rowIndex="1" />
+      <VBox prefHeight="200.0" spacing="24.0" GridPane.columnIndex="21" GridPane.columnSpan="4" GridPane.rowIndex="1">
+         <children>
+            <StackPane alignment="TOP_LEFT" minHeight="-Infinity" prefHeight="56.0">
+               <children>
+                  <TextField fx:id="fieldNomeRicetta" maxWidth="200.0" onKeyPressed="#aggiornaNome" onKeyTyped="#aggiornaNome" prefHeight="56.0" text="Nome ricetta">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                     <styleClass>
+                        <String fx:value="input-text--filled" />
+                        <String fx:value="body-large" />
+                     </styleClass>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
+                     <padding>
+                        <Insets left="16.0" top="16.0" />
+                     </padding>
+                  </TextField>
+                  <Label alignment="CENTER" style="-fx-background-color: transparent;" styleClass="body-small" text="Nome" translateY="8.0">
+                     <font>
+                        <Font size="12.0" />
+                     </font>
+                     <StackPane.margin>
+                        <Insets left="17.0" />
+                     </StackPane.margin>
+                  </Label>
+               </children>
+            </StackPane>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label-large" text="Ultima modifica:" />
+            <VBox prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <Separator prefWidth="200.0" />
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-small" text="Stile: " AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <Button alignment="CENTER_RIGHT" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--standard" AnchorPane.rightAnchor="0.0">
+                           <graphic>
+                              <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../img/add_iconpx.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Group>
+                           <children>
+                              <Rectangle arcHeight="8.0" arcWidth="8.0" fill="#fffbf2" height="26.0" layoutX="42.0" layoutY="55.0" stroke="#7c7767" strokeLineJoin="ROUND" strokeType="INSIDE" width="241.0" />
+                              <Rectangle fill="#9bc624" height="26.0" layoutX="81.0" layoutY="55.0" stroke="#7c7767" strokeLineJoin="ROUND" strokeType="INSIDE" width="163.0" />
+                           </children>
+                        </Group>
+                        <Text layoutX="4.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label-large" text="ABV" />
+                     </children>
+                  </AnchorPane>
+               </children>
+            </VBox>
+         </children>
+         <padding>
+            <Insets top="24.0" />
+         </padding></VBox>
    </children>
 </GridPane>
