--- a/src/main/resources/styles/global.css
+++ b/src/main/resources/styles/global.css
@@ -2,12 +2,13 @@
     -fx-background-color: -md-sys-color-surface;
 }
 
-.scroll, .flow-container {
+.scroll, .flow-container, .grid-container {
     -fx-background-color: -md-sys-color-surface;
     -fx-border-color: -md-sys-color-surface;
 }
 
-/* input text */
+/* INPUT FIELDS */
+
 .label {
     -fx-background-color: -md-sys-color-surface;
 }
@@ -18,9 +19,18 @@
     -fx-view-order: 1;
     -fx-border-radius: 4;
 }
+
 .input-text:focused {
     -fx-padding: 0 0 0 12;
 }
+
+.input-text--filled {
+    -fx-background-color: -md-sys-color-surface-variant;
+    -fx-border-color: transparent transparent -md-sys-color-on-surface;
+    -fx-background-radius: 0;
+    -fx-border-radius: 4 4 0 0;
+}
+
 .search-box {
     -fx-background-color: white, white;
     -fx-border-color: -md-sys-color-outline;
@@ -52,12 +62,34 @@
 .btn_nav {
     -fx-background-color: transparent;
 }
+
 .btn_nav--active {
     -fx-background-color: -md-sys-color-secondary-container;
     -fx-background-radius: 100;
 }
+
 .icon_btn {
     -fx-background-color: -md-sys-color-secondary-container;
+    -fx-background-radius: 100;
+}
+
+.icon_btn--filled {
+    -fx-background-color: -md-sys-color-primary;
+    -fx-background-radius: 100;
+}
+
+.icon_btn--alert {
+    -fx-background-color: -md-sys-color-error;
+    -fx-background-radius: 100;
+}
+
+.icon_btn--positive {
+    -fx-background-color: -md-ref-palette-secondary70;
+    -fx-background-radius: 100;
+}
+
+.icon_btn--standard {
+    -fx-background-color: transparent;
     -fx-background-radius: 100;
 }
 
@@ -72,3 +104,16 @@
     -fx-fill: -md-sys-color-on-surface-variant;
 }
 
+/* TABELLE */
+
+.table {
+    -fx-background-color: transparent;
+    -fx-table-header-border-color: transparent;
+}
+.table .column-header,
+.table .column-header .label,
+.table .column-header .filler,
+.table .column-header-background .filler {
+    -fx-background-color: transparent;
+    -fx-border-width: 0;
+}
