--- a/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
+++ b/src/main/resources/it/unipi/brewathome/modifica_ricetta.fxml
@@ -68,7 +68,8 @@
               <rowConstraints>
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="96.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="48.0" valignment="CENTER" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="254.0" minHeight="10.0" vgrow="SOMETIMES" />
+                <RowConstraints fillHeight="false" minHeight="10.0" valignment="TOP" />
+                  <RowConstraints minHeight="10.0" valignment="TOP" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <AnchorPane GridPane.columnSpan="3">
@@ -108,17 +109,17 @@
                      </children>
                   </AnchorPane>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="headline-large" text="Ingredienti" GridPane.rowIndex="1" />
-                  <VBox prefHeight="200.0" prefWidth="100.0" spacing="16.0" styleClass="card" GridPane.rowIndex="2">
+                  <VBox prefWidth="100.0" styleClass="card" GridPane.rowIndex="2" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
                      <children>
                         <AnchorPane prefHeight="72.0">
                            <children>
-                              <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0">
+                              <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <image>
                                     <Image url="@../../../img/fermentabili_icon.png" />
                                  </image>
                               </ImageView>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-large" text="Fermentabili" AnchorPane.leftAnchor="72.0" AnchorPane.topAnchor="0.0" />
-                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#aggiungiFermentabile" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--filled" AnchorPane.rightAnchor="0.0">
+                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#aggiungiFermentabile" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--filled" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="0.0">
                                  <graphic>
                                     <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -129,16 +130,62 @@
                               </Button>
                            </children>
                            <VBox.margin>
-                              <Insets top="16.0" />
+                              <Insets />
                            </VBox.margin>
+                           <padding>
+                              <Insets left="16.0" top="12.0" />
+                           </padding>
                         </AnchorPane>
-                        <TableView fx:id="tableFermentabili" styleClass="table">
+                        <TableView fx:id="tableFermentabili" maxHeight="-Infinity" minHeight="-Infinity" styleClass="table">
                           <columns>
-                            <TableColumn fx:id="columnPeso" editable="false" prefWidth="75.0" resizable="false" sortable="false" text="Peso" />
-                            <TableColumn fx:id="columnNome" editable="false" prefWidth="194.0" resizable="false" sortable="false" text="Nome" />
+                            <TableColumn fx:id="columnPesoFermentabile" editable="false" prefWidth="75.0" resizable="false" sortable="false" text="Peso" />
+                            <TableColumn fx:id="columnNomeFermentabile" editable="false" prefWidth="194.0" resizable="false" sortable="false" text="Nome" />
                               <TableColumn fx:id="columnColore" editable="false" prefWidth="61.0" resizable="false" sortable="false" text="Colore" />
                               <TableColumn fx:id="columnCategoria" editable="false" minWidth="0.0" prefWidth="125.0" resizable="false" sortable="false" text="Categoria" />
                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                     </children>
+                  </VBox>
+                  <VBox prefWidth="100.0" styleClass="card" GridPane.columnIndex="2" GridPane.rowIndex="2" GridPane.valignment="TOP" GridPane.vgrow="ALWAYS">
+                     <children>
+                        <AnchorPane prefHeight="72.0">
+                           <children>
+                              <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <image>
+                                    <Image url="@../../../img/luppoli_icon.png" />
+                                 </image>
+                              </ImageView>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-large" text="Luppoli" AnchorPane.leftAnchor="72.0" AnchorPane.topAnchor="0.0" />
+                              <Button alignment="CENTER_RIGHT" mnemonicParsing="false" onAction="#aggiungiLuppolo" prefHeight="40.0" prefWidth="40.0" styleClass="icon_btn--filled" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="0.0">
+                                 <graphic>
+                                    <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../../img/add_iconpx.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                           </children>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                           <padding>
+                              <Insets left="16.0" top="12.0" />
+                           </padding>
+                        </AnchorPane>
+                        <TableView fx:id="tableLuppoli" maxHeight="-Infinity" minHeight="-Infinity" styleClass="table">
+                           <columns>
+                              <TableColumn fx:id="columnPesoLuppolo" editable="false" prefWidth="75.0" resizable="false" sortable="false" text="Peso" />
+                              <TableColumn fx:id="columnNomeLuppolo" editable="false" prefWidth="225.0" resizable="false" sortable="false" text="Nome" />
+                              <TableColumn fx:id="columnAlpha" editable="false" prefWidth="74.0" resizable="false" sortable="false" text="Alpha" />
+                              <TableColumn fx:id="columnTempo" editable="false" minWidth="0.0" prefWidth="81.0" resizable="false" sortable="false" text="Tempo" />
+                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
                         </TableView>
                      </children>
                   </VBox>
@@ -223,7 +270,7 @@
                   </Label>
                </children>
             </StackPane>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label-large" text="Ultima modifica:" />
+            <Text fx:id="textUltimaModifica" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label-large" text="Ultima modifica:" />
             <VBox prefHeight="200.0" prefWidth="100.0">
                <children>
                   <Separator prefWidth="200.0" />
